update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -281,7 +281,7 @@
   "Revision": "Пересмотр",
   "Error": "Ошибка",
   "Start_revise": "Начать пересмотр",
-  "Revise": "Revise",
+  "Revise": "Пересмотр",
   "Failed_to_execute_operation_on_server": "Не удалось выполнить операцию на сервере, текущая операция отменена.",
   "Start_revise_tip": "Создайте временный документ и внесите в него изменения, объедините его обратно после просмотра изменений",
   "Load_doc_content_error": "Ошибка загрузки содержимого документа",
@@ -414,5 +414,5 @@
   "New": "Новый",
   "Table_template": "Шаблон таблицы",
   "Jump_to_original_doc": "Перейти к исходному документу",
-  "Freezed": "Freezed"
+  "Freezed": "Заморожено"
 }
