update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -415,7 +415,7 @@
   "Table_template": "Шаблон таблицы",
   "Jump_to_original_doc": "Перейти к исходному документу",
   "Freezed": "Заморожено",
-  "Callout": "Callout",
-  "The_current_location_does_not_support_pasting": "The current location does not support pasting ",
-  "Please_enter...": "Please enter..."
+  "Callout": "Выноска",
+  "The_current_location_does_not_support_pasting": "Текущее местоположение не поддерживает вставку ",
+  "Please_enter...": "Пожалуйста, введите..."
 }
