--- a/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
@@ -417,5 +417,11 @@
   "Freezed": "已冻结",
   "Callout": "高亮块",
   "The_current_location_does_not_support_pasting": "当前位置不支持粘贴",
-  "Please_enter...": "请输入..."
+  "Please_enter...": "请输入...",
+  "Combine_cell": "合并单元格",
+  "Split_cell": "拆分单元格",
+  "Row_number": "行数",
+  "Column_number": "列数",
+  "The_maximum_row_number_is_{number}": "最大行数为 {number}",
+  "The_maximum_column_number_is_{number}": "最大列数为 {number}"
 }
